# Kryptografia2.2

./: CMakeLists.txt  conf  main.cpp  player.sh
